<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="64dp"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:text="@string/course_map"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="211dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:layout_marginTop="25sp"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        tools:ignore="VisualLintTextFieldSize"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:hint="@string/university_year"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        tools:ignore="VisualLintTextFieldSize"
        android:inputType="number"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:ignore="VisualLintTextFieldSize"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/register"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/adamina"
        android:text="@string/register"
        android:textSize="25sp" />
</LinearLayout>